--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^29.4.1"
+    "husky": "^4.3.8",
+    "jest": "^29.4.1",
+    "pre-commit": "^1.2.2"
   }
 }
