--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^29.4.1",
-    "pre-commit": "^1.2.2"
+    "husky": "^4.3.8",
+    "jest": "^29.4.1"
   },
-  "pre-commit": [
-    "test"
-  ]
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
+  }
 }
