--- a/package.json
+++ b/package.json
@@ -17,11 +17,18 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "husky": "^4.3.8",
-    "jest": "^29.4.1"
+    "jest": "^29.4.1",
+    "lint-staged": "^13.1.0"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm test"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "jest --findRelatedTests"
+    ]
   }
 }
